// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionButtonAnt should render a button by default 1`] = `
<Button
  data-testid="the_id"
  disabled={true}
  htmlType="button"
  id="the_id"
  onClick={[Function]}
  readOnly={false}
>
  aha
</Button>
`;

exports[`ActionButtonAnt should render a button with children instead of a label 1`] = `
<Button
  data-testid="the_id"
  disabled={false}
  htmlType="button"
  id="the_id"
  onClick={[Function]}
  readOnly={false}
>
  FooButton
</Button>
`;

exports[`ActionFormButtonAnt should render a button by default 1`] = `
<Memo(observerComponent)
  label={null}
  operation="bound ActionImpl"
>
  <Memo(observerComponent)
    disabled={true}
    htmlType="submit"
    id="the_id"
    operation="bound ActionImpl"
    readOnly={false}
  />
</Memo(observerComponent)>
`;
